# cg1

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.markdown  alien.txt  animatedlight.cpp  animatedlight.h  animatedobject.h  animatedrotation.cpp  animatedrotation.h  animatedtranslation.cpp  animatedtranslation.h  animationcontroller.cpp  animationcontroller.h  camera.cpp  camera.h  config.cache  config.h  config.status  configure  configure.in  cube.cpp  cube.h  cylinder.cpp  cylinder.h  directionallight.cpp  directionallight.h  disk.cpp  disk.h  gdv.kdevprj  gllist.h  grid.cpp  grid.h  (+43 more)
models/: oger.txt  orgsrc_normals.txt  ritter-knie.txt  ritter-steht.txt
models/org/: orgsrc.txt
src/: animatedobject.h  animatedrotation.h  animationcontroller.cpp  animationcontroller.h  camera.cpp  camera.h  cube.cpp  directionallight.cpp  directionallight.h  grid.h  light.cpp  light.h  main.cpp  mazemap.cpp  meshobject.cpp  meshobject.h  oscillatingrotation.h  plane.cpp  plane.h  pointlight.cpp  scene.cpp  spotlight.h  torus.cpp  transformation.h  transformations.h
